<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybeauty_background">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:visibility="visible"
        android:foregroundGravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/recycler_view_item" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/mybeauty_logo_3" />

    <TextView
        android:id="@+id/backToTop_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40sp"
        android:fontFamily="@font/noto_sans_jp_regular"
        android:gravity="bottom"
        android:text="@string/top_message"
        android:textColor="@color/jp_text_gray_color"
        android:textSize="28sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/questionNumber_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:layout_toStartOf="@id/questionNumber7_textView"
        android:fontFamily="@font/academy_engraved_std_regular"
        android:gravity="bottom"
        android:text="@string/dummy_q1"
        android:textColor="@color/question_number_color"
        android:textSize="28sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/questionNumber7_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40sp"
        android:layout_marginBottom="28sp"
        android:fontFamily="@font/academy_engraved_std_regular"
        android:gravity="bottom"
        android:text="@string/q7_text"
        android:textColor="@color/jp_text_gray_color"
        android:textSize="28sp"
        android:visibility="invisible" />

</RelativeLayout>