<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="50dp"
    android:background="@android:color/white"
    android:paddingEnd="70dp"
    android:paddingBottom="50dp">

    <ImageView
        android:id="@+id/mainImage_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/skincare_girl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_one_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/noto_sans_jp_medium"
        android:text="@string/dummy_message_result_one"
        android:textColor="@color/jp_text_gray_color"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/mainImage_imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="70dp"
        android:background="@color/jp_text_gray_color"
        app:layout_constraintEnd_toEndOf="@+id/result_two_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/result_two_textView"
        app:layout_constraintTop_toTopOf="@+id/result_one_textView" />

    <TextView
        android:id="@+id/result_two_textView"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/noto_sans_jp_regular"
        android:text="@string/dummy_message_result_two"
        android:textColor="@color/jp_text_gray_color"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/mainImage_imageView"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.548" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/noto_sans_jp_regular"
        android:text="@string/dummy_message_result_three"
        android:textColor="@color/jp_text_gray_color"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/mainImage_imageView"
        app:layout_constraintTop_toBottomOf="@+id/result_two_textView" />


</androidx.constraintlayout.widget.ConstraintLayout>