<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expandable_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/see_more_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/button_pressed"
        android:fontFamily="@font/noto_sans_jp_medium"
        android:gravity="center"
        android:text="@string/text_see_more"
        android:textColor="@color/whiteText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/see_more_imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/see_more_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button_pressed"
        android:paddingStart="0dp"
        android:paddingEnd="50dp"
        android:src="@drawable/down_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/see_more_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/see_more_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandable_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/see_more_button">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/academy_engraved_std_regular"
            android:text="@string/point"
            android:textColor="@color/jp_text_gray_color"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewLeft"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="40dp"
            android:background="@color/jp_text_gray_color"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

        <View
            android:id="@+id/viewRight"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="40dp"
            android:background="@color/jp_text_gray_color"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/resultItemDetails_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:foregroundGravity="center"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:listitem="@layout/recycler_view_item" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_jp_medium"
            android:text="@string/text_subheading"
            android:textColor="@color/button_pressed"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/resultItemDetails_recyclerView"
            app:layout_constraintStart_toStartOf="@+id/resultItemDetails_recyclerView"
            app:layout_constraintTop_toBottomOf="@+id/resultItemDetails_recyclerView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/noto_sans_jp_medium"
            android:text="@string/text_subheading_2"
            android:textColor="@color/jp_text_gray_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/resultItemDetails_recyclerView" />

        <ImageView
            android:id="@+id/qrCode_imageView"
            android:layout_width="217dp"
            android:layout_height="217dp"
            android:src="@drawable/qr_code_sample"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/close_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/button_pressed"
            android:fontFamily="@font/noto_sans_jp_medium"
            android:gravity="center"
            android:text="@string/text_close"
            android:textColor="@color/whiteText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qrCode_imageView" />

        <ImageView
            android:id="@+id/close_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_pressed"
            android:paddingStart="0dp"
            android:paddingEnd="50dp"
            android:src="@drawable/up_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/close_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/close_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
