<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewId"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    card_view:cardElevation="2dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="40dp">

        <ImageView
            android:id="@+id/mainImage_imageView"
            android:layout_width="400dp"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/skincare_girl"
            card_view:layout_constraintBottom_toBottomOf="@+id/packageName_textView"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/ratingBar_layout" />

        <include
            android:id="@+id/ratingBar_layout"
            layout="@layout/child_view_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            card_view:layout_constraintStart_toEndOf="@+id/mainImage_imageView"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="580dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/noto_sans_jp_medium"
            android:text="@string/dummy_title"
            android:textColor="@color/jp_text_gray_color"
            android:textSize="28sp"
            card_view:layout_constraintStart_toEndOf="@+id/mainImage_imageView"
            card_view:layout_constraintTop_toBottomOf="@+id/ratingBar_layout" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/jp_text_gray_color"
            card_view:layout_constraintEnd_toEndOf="@+id/title_textView"
            card_view:layout_constraintStart_toStartOf="@+id/title_textView"
            card_view:layout_constraintTop_toBottomOf="@+id/title_textView" />

        <TextView
            android:id="@+id/itemName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/noto_sans_jp_medium"
            android:text="@string/dummy_item_name"
            android:textColor="@color/jp_text_gray_color"
            android:textSize="20sp"
            card_view:layout_constraintStart_toEndOf="@+id/mainImage_imageView"
            card_view:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/packageName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/noto_sans_jp_medium"
            android:text="@string/dummy_package_name"
            android:textColor="@color/button_pressed"
            android:textSize="20sp"
            card_view:layout_constraintStart_toEndOf="@+id/mainImage_imageView"
            card_view:layout_constraintTop_toBottomOf="@+id/itemName_textView" />

        <include
            layout="@layout/child_view_result_item_expandable_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/mainImage_imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

